# docs/swagger.json
@@ -24,7 +24,7 @@
                 ],
                 "description": "get user auth state",
                 "tags": [
-                    "User"
+                    "Auth"
                 ],
                 "summary": "Auth",
                 "responses": {
@@ -50,7 +50,7 @@
                 ],
                 "description": "enable user auth",
                 "tags": [
-                    "User"
+                    "Auth"
                 ],
                 "summary": "Auth",
                 "parameters": [
@@ -146,25 +146,17 @@
             }
         },
         "/api/server": {
-            "post": {
+            "get": {
                 "security": [
                     {
                         "BasicAuth": []
                     }
                 ],
-                "description": "Operate mixed socks server",
+                "description": "mixed socks server state",
                 "tags": [
                     "Server"
                 ],
-                "summary": "Operate",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "operate [start,stop,reload]",
-                        "name": "operate",
-                        "in": "query"
-                    }
-                ],
+                "summary": "State",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -179,20 +171,26 @@
                         }
                     }
                 }
-            }
-        },
-        "/api/state": {
-            "get": {
+            },
+            "post": {
                 "security": [
                     {
                         "BasicAuth": []
                     }
                 ],
-                "description": "mixed socks server state",
+                "description": "Operate mixed socks server",
                 "tags": [
                     "Server"
                 ],
-                "summary": "State",
+                "summary": "Operate",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "operate [start,stop,restart]",
+                        "name": "operate",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -275,7 +273,7 @@
             }
         },
         "/api/user/{username}": {
-            "delete": {
+            "post": {
                 "security": [
                     {
                         "BasicAuth": []
