# internal/api/user.go
@@ -6,45 +6,6 @@ import (
 	"github/xmapst/mixed-socks/internal/service"
 )
 
-// Auth
-// @Summary Auth
-// @description enable user auth
-// @Tags User
-// @Security BasicAuth
-// @Param auth body service.Auth true "user auth"
-// @Success 200 {object} JSONResult{}
-// @Failure 500 {object} JSONResult{}
-// @Router /api/auth [post]
-func enableAuth(c *gin.Context) {
-	render := Gin{Context: c}
-	var req = &service.Auth{}
-	err := c.ShouldBind(req)
-	if err != nil {
-		render.SetError(CodeErrParam, err)
-		return
-	}
-	err = req.Save()
-	if err != nil {
-		render.SetError(CodeErrMsg, err)
-		return
-	}
-	render.SetJson("saved")
-}
-
-// Auth
-// @Summary Auth
-// @description get user auth state
-// @Tags User
-// @Security BasicAuth
-// @Success 200 {object} JSONResult{}
-// @Failure 500 {object} JSONResult{}
-// @Router /api/auth [get]
-func getAuth(c *gin.Context) {
-	render := Gin{Context: c}
-	auth := &service.Auth{}
-	render.SetJson(auth.Get())
-}
-
 // list
 // @Summary list
 // @description List all user
@@ -97,7 +58,7 @@ func saveUser(c *gin.Context) {
 // @Param username path string true "username"
 // @Success 200 {object} JSONResult{}
 // @Failure 500 {object} JSONResult{}
-// @Router /api/user/{username} [delete]
+// @Router /api/user/{username} [post]
 func delUser(c *gin.Context) {
 	render := Gin{Context: c}
 	username := c.Param("username")
